[package]
name = "amp_authorizer"
version = "0.1.0"
edition = "2018"

[dependencies]
rocket = "0.4.10"
rocket_contrib = "0.4.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2"
bitcoin = "0.21"
elements = "0.17"
secp256k1 = { version = "0.15", features = ["recovery", "endomorphism"] }
base64 = "0.10"
